Fixed some components not showing up correctly on chrome

--- a/packages/ui/src/components/BackButton.css
+++ b/packages/ui/src/components/BackButton.css
@@ -8,5 +8,7 @@
     
     img {
         filter: var(--icon-filter);
+        width: 100%;
+        height: 100%;
     }
 }
